initially after checkout unable to run project so I made initial changes so that every one can be able to run code after clone. added http module and added  node_modules gitignore file

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/johnpapa/node-hello/issues"
   },
-  "homepage": "https://github.com/johnpapa/node-hello#readme"
+  "homepage": "https://github.com/johnpapa/node-hello#readme",
+  "dependencies": {
+    "http": "0.0.0"
+  }
 }
