--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
-image:
-  file: .gitpod.Dockerfile
-
+ports:
+  - port: 3000
+    onOpen: open-preview
 tasks:
   - init: npm install
     command: npm run start
