--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -26,6 +26,8 @@ jobs:
       run: docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
     - name: Pushing Docker Image to DockerHub
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myimage
+    - name: setting environment config
+      run: export KUBECONFIG=/etc/kubernetes/admin.conf
     - name: create deployement
       run: kubectl create -f deployment.yml
     - name: check deployment information
