--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -40,5 +40,5 @@ jobs:
       run: kubctl get svc
     - name: describe all service objects deployed
       run: kubectl describe svc ngnix-svc
-    - name: Download a Build Artifact
+    #- name: Download a Build Artifact
  
