--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,4 +45,4 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: myartifact
-        path: .github/workflow/myartifact
+        path: ${{ github.workspace }}
