--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -1,13 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
- name: nginx-svc
- labels:
- app: HelloNode
+  name: nodeapp-service
 spec:
- type: NodePort
- ports:
- - port: 80
- nodePort: 30080
- selector:
- app: HelloNode
+  selector:
+    app: nodeapp 
+  type: LoadBalancer
+  ports:
+  - protocol: TCP
+    port: 5000
+    targetPort: 3000
+    nodePort: 31110
+
+
