--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodeapp-service
+  name: HelloNodeService
 spec:
   selector:
-    app: nodeapp 
+    app: HelloNode 
   type: LoadBalancer
   ports:
   - protocol: TCP
