--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -28,7 +28,7 @@ jobs:
       run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myimage
      
     - name: create deployement
-      run: kubectl create -f deployment.yml
+      run: kubectl create -f deployment.yaml
     #- name: check deployment information
      # run:  kubectl get deployment
     #- name: describe deployment 
