--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -14,21 +14,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    #- name: Build the Docker image
-     # run: docker build . --file Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/myimage
-    #- name: Images present
-     # run: docker images
-    #- name: Running a Docker Image
-     # run: docker run -p 3000:3000 -d ${{ secrets.DOCKERHUB_USERNAME }}/myimage
-    #- name: Containers present
-     # run: docker ps -a
-    #- name: Login to DockerHub
-     # run: docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
-    #- name: Pushing Docker Image to DockerHub
-     # run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myimage
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile -t ${{ secrets.DOCKERHUB_USERNAME }}/myimage
+    - name: Images present
+      run: docker images
+    - name: Running a Docker Image
+      run: docker run -p 3000:3000 -d ${{ secrets.DOCKERHUB_USERNAME }}/myimage
+    - name: Containers present
+      run: docker ps -a
+    - name: Login to DockerHub
+      run: docker login -u="${{ secrets.DOCKERHUB_USERNAME }}" -p="${{ secrets.DOCKERHUB_PASSWORD }}"
+    - name: Pushing Docker Image to DockerHub
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myimage
      
-    - name: create deployement
-      run: kubectl create -f deployment.yaml
+    #- name: create deployement
+     # run: kubectl create -f deployment.yaml
     #- name: check deployment information
      # run:  kubectl get deployment
     #- name: describe deployment 
