--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,6 @@ jobs:
         with:
           node-version: '18'
       - run: npm install mocha --save-dev
+      - run: npm install chai --save-dev
       - run: npm run test
       
