--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,7 @@ jobs:
           node-version: '18'
       - run: npm install mocha --save-dev
       - run: npm install chai --save-dev
+      - run: npm install istanbul --save-dev
       - run: npm run test
+      - run: npm run coverage
       
