--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/johnpapa/node-hello#readme",
   "devDependencies": {
     "istanbul": "^0.4.4",
-    "mocha":"^10.0.0",
-    "chai":"^4.3.6"
+    "mocha":"*",
+    "chai":"*"
   }
 }
