--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -13,12 +13,8 @@ jobs:
                npm install
                npm run test
       - run: npm run coverage
-      
-      - uses: actions/checkout@v2
-
-      - run: mkdir -p path/artifact
 
       - uses: actions/upload-artifact@v3
         with:
            name: my-artifact
-           path: path/artifact/coverage.html
+           path: p/home/runner/work/Acarin-node.js/Acarin-node.js/coverage
