--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -17,4 +17,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
            name: my-artifact
-           path: p/home/runner/work/Acarin-node.js/Acarin-node.js/coverage
+           path: p/home/runner/work/Acarin-node.js/Acarin-node.js/
