--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ name: sample CI pipeline
 
 # Controls when the workflow will run
 on:
+  push: 
+     branches: [master]
   workflow_run:
     workflows: [build-test]
     types: [completed]
