--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ on:
     workflows: [build-test]
     types: [completed]
 
+  workflow_dispatch:
+
 jobs:
   on-success:
     runs-on: ubuntu-latest
