--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,8 @@ on:
      branches: [master]
   workflow_run:
     workflows: [build-test]
-    types: [completed]
+    types: 
+      - completed
 
   workflow_dispatch:
 
