--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ on:
   workflow_dispatch:
 
 jobs:
+  call-build-test:
+    uses: ./.github/workflows/build-test.yml
   on-success:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
