--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,3 +15,18 @@ jobs:
                npm install
                npm run test
       - run: npm run coverage
+      
+  merge:
+    runs-on: ubuntu-latest
+    needs: [learn-test]
+    steps:
+      - uses: actions/checkout@main
+      - name: Merge development -> main
+        uses: devmasx/merge-branch@v1.4.0
+        with:
+          type: now
+          from_branch: development
+          target_branch: main
+          github_token: ${{ github.token }
+    
+    
