--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -29,6 +29,7 @@ jobs:
           type: now
           from_branch: development
           target_branch: main
+          github_token: ${{ github.token }}
 
     
     
