--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-hello",
+  "name": "node-hello-hiii",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/johnpapa/node-hello.git"
   },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
