--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 on:
   # Trigger analysis when pushing in master or pull requests, and when creating
   # a pull request. 
-  #push:
-  # branches:
-  # - master
+  push:
+    branches:
+      - master
   pull_request:
       types: [opened, synchronize, reopened]
 
