--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,9 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@gmail.com"
 
-          yq eval '.spec.template.spec.containers[0].image = "poojachalse/node-image:${{ env.GITHUB_BRANCH }}"' -i deployment/node-app-deployment.yml
+          yq eval '.spec.template.spec.containers[0].image = "poojachalse/node-image:${{ env.GITHUB_BRANCH }}"' -i apiVersion: apps
+/deployment.yml
+
 
           git add .
 
