--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,7 @@ jobs:
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@gmail.com"
 
-          yq eval '.spec.template.spec.containers[0].image = "poojachalse/node-image:${{ env.GITHUB_BRANCH }}"' -i apiVersion: apps
-/deployment.yml
+          yq eval '.spec.template.spec.containers[0].image = "poojachalse/node-image:${{ env.GITHUB_BRANCH }}"' -i deployment.yml
 
 
           git add .
